Machine independent part of fix for PR 6152 (gdb doesn't work on machines with UVM and seperate I&D-Cache). Mostly by Michael Hitch, but pass struct proc * instead of the pmap. Reason: said machine will need a method to do the syncing operation for "curproc", too; this way more code can be shared.